# Policy_Reviewer_Agent

./: .gitignore  README.md  app_streamlit.py  main.py  pyproject.toml  requirements.txt
.build/policy_reviewer_agent/core/: logging_config.py
.build/policy_reviewer_agent/lambda_handlers/: policy_ingest_lambda.py
.build/policy_reviewer_agent/orchestrators/: policy_pipeline.py
.build/policy_reviewer_agent/services/: s3_client.py  textract_client.py
src/policy_reviewer_agent/core/: exceptions.py  settings.py
src/policy_reviewer_agent/lambda_handlers/: policy_callback_lambda.py  policy_ingest_lambda.py
src/policy_reviewer_agent/services/: audit.py  file_utils.py  result_persistor.py
